--- a/my.css
+++ b/my.css
@@ -10,28 +10,33 @@
  
   /* unvisited link */
 a:link {
-color: darkred; }
+color: white; text-decoration: none; background-color: darkolivegreen; padding: 5px 15px; text-align: center
+}
 
 
 /* visited link */
 a:visited {
-    color: darkgreen;
+    color: white;  text-decoration: none; background-color:darkolivegreen; padding: 5px 15px; text-align: center
 }
 
 /* mouse over link */
 a:hover {
-    color: blue;
+    color: black; text-decoration: underline;  background-color: #d1efb5; padding: 10px 10px;
 }
 
 /* selected link */
 a:active {
-    color: blueviolet;
+    color:black; padding: 10px 30px;
+}
+h1 {
+	background-color:  #edeba0; padding: 2px ; text-align: center
 }
 
-tr:hover {background-color: #f2f2f2}
+tr:hover {background-color: #d1efb5; font-size: 1.1em;
+}
 
 table, th, td {
-   border: 1px solid black; outline-color:red;
+   border: 1px solid black; 
 }
 
 table {
@@ -55,6 +60,6 @@ h1 {
 }	
 
 th {
-    background-color: darkolivegreen;
+    background-color: #928c6f;
     color: white;
 }
