--- a/my.css
+++ b/my.css
@@ -5,10 +5,37 @@
 	 } 
  
  body {
-	 font-family: Arial, Helvitica, Futura;
+	 font-family: Arial, Helvitica, Futura; 
 	 }
  
-  /* unvisited link */
+ .links {
+ text-align:center;  background-color: #85B6B0 ; width:15%; height:100%; 
+position: absolute; top: 4px; left: 10px; padding-top: 50px; max-width: 230px; }
+
+
+
+.header {
+	  position: absolute; 
+width:70%; left:20%; top:4px; background-color:#edeba0;
+
+}	
+.maininfo {
+	  position: absolute;
+width:70%; left:20%; top:220px; 
+}
+
+.storeimg {
+	position: absolute;
+width:70%; left:20%; top:500px;  
+}
+
+.tables {
+	  position: absolute;
+width:70%; left:20%; top:250px; 
+}
+
+
+ /* unvisited link */
 a:link {
 color: white; text-decoration: none; background-color: darkolivegreen; padding: 5px 15px; text-align: center
 }
@@ -28,23 +55,23 @@ a:hover {
 a:active {
     color:black; padding: 10px 30px;
 }
-h1 {
-	background-color:  #edeba0; padding: 2px ; text-align: center
+
+
+
+tr:hover {background-color: #d1efb5; font-weight:bold;
 }
 
-tr:hover {background-color: #d1efb5; font-size: 1.1em;
-}
 
 table, th, td {
    border: 1px solid black; 
 }
 
 table {
-    width: 100%;
+    width: 100%; 
 }
 
 th {
-    height: 100px; font-size: 1.4em;
+    height: 100px; font-size: 1.4em; width: 50px;
 }
 
 td {
@@ -53,10 +80,6 @@ td {
 
 th {
     text-align: center;
-}
-
-h1 {
-	text-align: center;
 }	
 
 th {
