--- a/my.css
+++ b/my.css
@@ -68,7 +68,7 @@ a:active {
 
 
 
-tr:hover {background-color: #d1efb5; font-weight:bold;  
+tr:hover {background-color: #d1efb5; /* Light green */ font-weight:bold;  
 }
 
 
@@ -96,3 +96,49 @@ th {
     background-color: #928c6f;
     color: white;
 }
+ /* Dropdown Button */
+.dropbtn {
+ color: white; text-decoration: none; background-color: darkolivegreen; padding: 5px 15px;
+	     
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    text-decoration: underline;  background-color: #d1efb5; padding: 10px 15px; color:black;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+	
+}
+
+/* Dropdown Content (Hidden by Default) */ 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width:100%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,1);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block; 
+	background-color: 	 #c2d5d6;/* Light green */
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
