--- a/my.css
+++ b/my.css
@@ -34,9 +34,9 @@ width:70%; left:20%; top:4px; background-color:#edeba0;
 width:70%; left:20%; top:220px; 
 }
 
-.storeimg {
+.products {
 	position: absolute;
-width:70%; left:20%; top:500px;  
+width:70%; left:20%; top:480px;  background-color:#edeba0; height:35%;
 }
 
 .tables {
@@ -47,13 +47,13 @@ width:70%; left:20%; top:250px;
 
  /* unvisited link */
 a:link {
-color: white; text-decoration: none; background-color: darkolivegreen; padding: 5px 15px; text-align: center
+color: white; text-decoration: none; background-color: darkolivegreen; padding: 5px 15px; text-align: center;
 }
 
 
 /* visited link */
 a:visited {
-    color: white;  text-decoration: none; background-color:darkolivegreen; padding: 5px 15px; text-align: center
+    color: white;  text-decoration: none; background-color:darkolivegreen; padding: 5px 15px; text-align: center;
 }
 
 /* mouse over link */
@@ -142,3 +142,106 @@ th {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+/* SLIDESHOW */
+
+
+
+/* Slideshow container */
+.slideshow-container {
+  
+  max-width: 250px;
+  position: relative;
+ top:560px; width:70%; left:5%;
+  
+}
+
+
+
+.mySlides {
+    display: none;
+	
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 1px;
+  color: red;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: red;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 90%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: gray;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+   position: relative;
+ top:540px; left:5%;
+}
+
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: .8s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
